src/test/deca/extension/codegen/invalid/result/test_initialisation_invalid_output_expected.res
Error: int_allocation_table_must_be_strictly_positive
